--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Shawley's Notes
 subtitle: ''
 description: ''
 keywords:
 author: Shawley
-language: en
+language: zh-Hans
 timezone: ''
 
 # URL
