--- a/.travis.yml
+++ b/.travis.yml
@@ -39,14 +39,15 @@ before_script:
 # Maybe add minification scripts here
 script:
 - hexo generate
+- hexo clean && hexo deploy
 
 after_success:
-- mkdir .deploy                   # Create a folder to use for teh pages branch
-- cd .deploy
-- git clone --depth 1 --branch gh-pages --single-branch $DEPLOY_REPO . || (git init && git remote add -t gh-pages origin $DEPLOY_REPO)
-- rm -rf ./*                      # Clear old verion
-- cp -r ../public/* .             # Copy over files for new version
-- git add -A .          
-- git commit -m 'Site updated'    # Make a new commit for new version
-- git branch -m gh-pages
-- git push -q -u origin gh-pages  # Push silently so we don't leak information
+# - mkdir .deploy                   # Create a folder to use for teh pages branch
+# - cd .deploy
+# - git clone --depth 1 --branch gh-pages --single-branch $DEPLOY_REPO . || (git init && git remote add -t gh-pages origin $DEPLOY_REPO)
+# - rm -rf ./*                      # Clear old verion
+# - cp -r ../public/* .             # Copy over files for new version
+# - git add -A .          
+# - git commit -m 'Site updated'    # Make a new commit for new version
+# - git branch -m gh-pages
+# - git push -q -u origin gh-pages  # Push silently so we don't leak information
