--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ node_js: stable
 # Only create a new version on pushes to certain branches.
 branches:
   only:
-  - source
+  - master
 
 before_install:
 - npm install -g hexo-cli
